# OriginLite

./: .gitignore
data/: 03ZnO UV vis Reflectancia difusa.txt
originlite/: README.md  _uploaded.olite  app.py  current.olite  pyproject.toml  requirements.txt  test_upload.py
originlite/originlite/: __init__.py  charts.py  constants.py  data.py  fitting.py  themes.py  utils.py
originlite/originlite/analysis/: __init__.py  fits.py  signal.py
originlite/originlite/core/: __init__.py  data_model.py  formula.py  operations.py  replay.py
originlite/originlite/plugins/: registry.py
originlite/originlite/project/: __init__.py  serializer.py
originlite/originlite/tests/: test_project_serializer_ops.py
originlite/originlite/ui/: helpers.py  sections.py  sections_export.py
originlite/originlite/viz/: __init__.py  builder.py
originlite/tests/: conftest.py  test_app_smoke.py  test_data_model.py  test_fits.py  test_formula_security.py  test_project_roundtrip.py  test_signal.py
originlite/ui/: __init__.py  sections_export.py
