[project]
name = "originlite"
version = "0.2.0"
requires-python = ">=3.9"
description = "Open-source lightweight OriginPro alternative"
authors = [{name="OriginLite Dev"}]
license = {text = "MIT"}
dependencies = [
    "streamlit<=1.12.0",
    "pandas>=2.1",
    "plotly>=5.22",
    "numpy>=1.26",
    "scipy>=1.13",
    "numexpr>=2.10",
    "kaleido>=0.2",
    "altair>=4.2,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
